@@ -349,7 +349,7 @@ To add a missing function, read: doc/How_to_add_a_missing_function.md
 * CHAR -- Returns the character specified by the code number
 * CLEAN -- Removes all nonprintable characters from text
 * CODE -- Returns a numeric code for the first character in a text string
-* CONCATENATE -- Joins several text items into one text item
+* CONCATENATE -- Joins several text items into one text item -- _R_ _C_
 * DOLLAR -- Converts a number to text, using the $ (dollar) currency format
 * EXACT -- Checks to see if two text values are identical
 * FIND, FINDB -- Finds one text value within another (case-sensitive) -- _R_ _C_ (not FINDB)
